[gd_scene load_steps=6 format=3 uid="uid://dhk5kf6843qh"]

[ext_resource type="Texture2D" uid="uid://sbk4gb631rqi" path="res://art/boss/boss.png" id="1_80yie"]
[ext_resource type="Texture2D" uid="uid://dc3wng1tq72l2" path="res://art/boss/openClose.png" id="2_hjp2p"]
[ext_resource type="Script" path="res://scenes/boss/boss.gd" id="2_pnxck"]
[ext_resource type="Texture2D" uid="uid://mghlo4uf6cah" path="res://art/boss/openMedium.png" id="3_q4i6n"]
[ext_resource type="Texture2D" uid="uid://bar4m63uohb5q" path="res://art/boss/openMouth.png" id="4_o0u7f"]

[node name="Boss" type="Sprite2D"]
position = Vector2(882, 334)
scale = Vector2(2, 2)
texture = ExtResource("1_80yie")
script = ExtResource("2_pnxck")

[node name="Mouths" type="Node" parent="."]

[node name="OpenClose" type="Sprite2D" parent="Mouths"]
visible = false
position = Vector2(879, 262)
texture = ExtResource("2_hjp2p")

[node name="OpenMedium" type="Sprite2D" parent="Mouths"]
visible = false
position = Vector2(879, 262)
texture = ExtResource("3_q4i6n")

[node name="OpenMouth" type="Sprite2D" parent="Mouths"]
visible = false
position = Vector2(879, 262)
texture = ExtResource("4_o0u7f")
